--- a/src/bep/BEPCommands/BUILD
+++ b/src/bep/BEPCommands/BUILD
@@ -12,6 +12,7 @@ swift_library(
     deps = [
         "//src/bep/BEPCore",
         "@com_github_apple_swift_argument_parser//:ArgumentParser",
+        "@com_github_kylef_pathkit//:PathKit",
     ],
 )
 
