--- a/.bazelrc
+++ b/.bazelrc
@@ -4,5 +4,7 @@ test:bep_fixture --runs_per_test=10
 test:bep_fixture --runs_per_test_detects_flakes=true
 test:bep_fixture -t-
 test:bep_fixture --test_env=CREATE_XCRESULT_BUNDLE=1
+test:bep_fixture --zip_undeclared_test_outputs=false
+test:bep_fixture --build_event_binary_file=/tmp/bazel/bep
 build:bes_server --bes_backend=grpc://localhost:9000
 build:bes_server --bes_upload_mode=fully_async
