--- a/src/xcresult/XCResultCommands/Resources/xcrun_xcresulttool_formationDescription_get__overrides_v3.yml
+++ b/src/xcresult/XCResultCommands/Resources/xcrun_xcresulttool_formationDescription_get__overrides_v3.yml
@@ -4,3 +4,8 @@ overrides:
       - name: tests
         generatedType: ActionTestSummaryIdentifiableObject
         overrideType: ActionTestSummaryGroup
+  - type: ActionTestSummaryGroup
+    properties:
+      - name: subtests
+        generatedType: ActionTestSummaryIdentifiableObject
+        overrideType: ActionTestSummaryGroup
