--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,4 @@
-common --enable_bzlmod=false
+build --xcode_version=16.1
 build --repository_cache=/tmp/bazel/repository_cache
 build --disk_cache=/tmp/bazel/disk_cache
 test:bep_fixture --runs_per_test=10
