--- a/src/test_undeclared_outputs/Commands/BUILD
+++ b/src/test_undeclared_outputs/Commands/BUILD
@@ -11,8 +11,8 @@ swift_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/bep/BEPCore",
-        "@com_github_apple_swift_argument_parser//:ArgumentParser",
-        "@com_github_kylef_pathkit//:PathKit",
+        "@pathkit//:PathKit",
+        "@swift_argument_parser//:ArgumentParser",
     ],
 )
 
